@@ -1,5 +1,5 @@
 // kth-rgbd: Visual SLAM from RGB-D data
-// Copyright (C) 2011-2013  Virgile Högman
+// Copyright (C) 2011-2015  Virgile Högman
 //
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
