@@ -1,5 +1,5 @@
 // kth-rgbd: Visual SLAM from RGB-D data
-// Copyright (C) 2011-2013  Virgile Högman
+// Copyright (C) 2011-2015  Virgile Högman
 //
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -24,27 +24,47 @@ Checkout kth-rgbd code from SVN.
 svn co https://kth-rgbd.googlecode.com/svn/trunk/kth-rgbd
 
 --------------------------------------------------------------------
-Dependencies
+Dependencies: g2o + OpenSIFT
 --------------------------------------------------------------------
 Dependencies have to be installed correctly before building kth-rgbd.
-URLs are given for reference, install preferably with package manager.
-OpenSIFT and g2o require manual installation. 
+OpenSIFT and g2o require manual installation (but not at system level).
 
 * g2o: A General Framework for Graph Optimization (OpenSLAM)
 svn co https://svn.openslam.org/data/svn/g2o
+Build the repository version in trunk.
+Last tested with svn rev 54.
 
-!!! Important note for g2o (svn revision 33) !!!
-A legacy version is found in g2o/tags/before-github-sync.
-Build this version instead of the main one found in g2o/trunk.
-If SuiteSparse is found by g2o (optional package) there will be link errors as this in not supported in this current version of kth-rgbd.
-To hide SuiteSparse in g2o, edit g2o/before-github-sync/CMakeLists.txt and comment (#) FIND_PACKAGE(CSPARSE) before running cmake ..
-When built done you can check that g2o/before-github-sync/lib contains libg2o_ext_csparse.so.
-Use this legacy version of g2o in kth-rgbd (see below). 
+!!! IMPORTANT NOTE - FORCE CSPARSE BUILD IN G2O !!!
+If csparse is found by g2o (optional package) there will be link errors.
+External csparse is not supported in kth-rgbd yet. 
+However it works with the redistribution of csparse provided by g2o.
+
+cd g2o/trunk
+edit CMakeLists.txt and comment (#) FIND_PACKAGE(CSPARSE)
+cd build
+cmake ..
+make
+Check that lib contains libg2o_ext_csparse.so.
+
+Note: the provided configuration kth-rgbd points to the build directory of g2o.
+It is not necessary to make install g2o at system level.
 
 * OpenSIFT Library - Rob Hess
 http://robwhess.github.com/opensift/
 (sub-dependencies -> GTK2, OpenCV)
 git clone https://github.com/robwhess/opensift
+
+Build the library using MAKEFILE.
+cd opensift
+make
+
+Note: the provided configuration kth-rgbd point to the build directory of OpenSIFT.
+It is not necessary to make install OpenSIFT at system level.
+
+--------------------------------------------------------------------
+Dependencies (standard)
+--------------------------------------------------------------------
+URLs are given for reference, install preferably with package manager.
 
 * OpenCV
 http://opencv.willowgarage.com/
